--- a/.github/workflows/t1.yml
+++ b/.github/workflows/t1.yml
@@ -15,7 +15,7 @@ jobs:
              - name: run test
                run: pyrhon -m unittrst test.py      
      deploy:
-         need: run-tests   
+         needs: run-testes  
          runs-on: ubuntu-latest
          steps:
              - name: checkout
