--- a/.github/workflows/t1.yml
+++ b/.github/workflows/t1.yml
@@ -9,13 +9,13 @@ jobs:
              - name: install dependancies
                uses: actions/setup-python@v2
                with:
-                 python-version: '3.4x'
+                 python-version: '3.x'
              - name: install libiraries
-               run: pip insatall -r requirments.txt
+               run: pip install -r requirments.txt
              - name: run test
                run: pyrhon -m unittrst test.py      
      deploy:
-         needs: run-tests   
+         needs: run-tastes 
          runs-on: ubuntu-latest
          steps:
              - name: checkout
